[package]
name = "getwowstats"
license = "MIT"
authors = ["Gerald L. Hevener Jr. M.S."]
version = "0.1.0"
edition = "2021"

[lib]
name = "getwowstats"
path = "src/lib/libgetwowstats.rlib"

[[bin]]
name = "getwowstats"
path = "src/bin/getwowstats.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }